minor changes to TransactionsController + fix in schema decimal value
