# app/Controllers/Http/TransactionsController.ts
@@ -1,5 +1,6 @@
 import { HttpContextContract } from '@ioc:Adonis/Core/HttpContext';
 import { rules, schema } from '@ioc:Adonis/Core/Validator';
+import Database from '@ioc:Adonis/Lucid/Database';
 import Transaction from 'App/Models/Transaction';
 
 const TransactionTypes = {
@@ -23,7 +24,7 @@ export default class TransactionsController {
       user = auth.user!;
 
     const createTransactionPayloadSchema = schema.create({
-      createdAt: schema.date.optional(),
+      created_at: schema.date.optional(),
       type: schema.enum(Object.values(TransactionTypes)),
       category: schema.enum.optional(Object.values(OutcomeTransactionTypes)),
       amount: schema.number(),
@@ -44,7 +45,16 @@ export default class TransactionsController {
     // Since the timestamp might be generated by the database, fetch the row again
     await transaction.refresh();
 
-    return response.status(201).send(transaction);
+    let balance = 0;
+    const balanceQuery = await Database.from('user_balances')
+      .select('balance').where('user_id', user.id)
+      .first();
+    if (balanceQuery && balanceQuery.balance) balance = balanceQuery.balance;
+
+    return response.status(201).send({
+      transaction,
+      balance
+    });
   }
 
   public async listTransactions(ctx: HttpContextContract) {
@@ -92,7 +102,7 @@ export default class TransactionsController {
     if (!transaction) return response.status(404);
 
     const editTransactionPayloadSchema = schema.create({
-      createdAt: schema.date.optional(),
+      created_at: schema.date.optional(),
       category: schema.enum.optional(Object.values(OutcomeTransactionTypes)),
       amount: schema.number.optional(),
       comment: schema.string.optional({}, [
@@ -108,7 +118,16 @@ export default class TransactionsController {
 
     await transaction.save();
 
-    return response.status(200).send(transaction);
+    let balance = 0;
+    const balanceQuery = await Database.from('user_balances')
+      .select('balance').where('user_id', user.id)
+      .first();
+    if (balanceQuery && balanceQuery.balance) balance = balanceQuery.balance;
+
+    return response.status(200).send({
+      transaction,
+      balance
+    });
   }
 
   public async deleteTransaction(ctx: HttpContextContract) {
@@ -125,6 +144,15 @@ export default class TransactionsController {
 
     await transaction.delete();
 
-    return response.status(204);
+    let balance = 0;
+    const balanceQuery = await Database.from('user_balances')
+      .select('balance').where('user_id', user.id)
+      .first();
+    if (balanceQuery && balanceQuery.balance) balance = balanceQuery.balance;
+
+    return response.status(200).send({
+      success: true,
+      balance: balance
+    });
   }
 }
